--- a/app-k8s/service.yaml
+++ b/app-k8s/service.yaml
@@ -12,4 +12,4 @@ spec:
     - name: http
       protocol: TCP
       port: 80             # Public port exposed via LoadBalancer
-      targetPort: 5000     # Internal Flask app port
+      targetPort: 5000     # Internal Flask app port..
